# agent-remote-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  managed-tools.yml  prepare-release.yml  release.yml
scripts/: build-managed-tools.sh  install-cli.sh  install.sh  mutagen-scp  package-release.sh  prepare-release.sh
src/: api.rs  auth.rs  cli.rs  config.rs  dependencies.rs  doctor.rs  lib.rs  local_state.rs  main.rs  mutagen.rs  platform.rs  secrets.rs  ssh.rs  wireguard.rs  workspace.rs
