[package]
name = "agent-remote-cli"
version = "0.0.3"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/Agent-Remote/agent-remote-cli"
description = "Local command line client for agent-remote."

[[bin]]
name = "agent-remote"
path = "src/main.rs"

[[bin]]
name = "agent-remote-wireguard"
path = "src/bin/agent-remote-wireguard.rs"

[[bin]]
name = "fclaude"
path = "src/bin/fclaude.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.12"
